--- a/css/styles.scss
+++ b/css/styles.scss
@@ -17,6 +17,7 @@ html {
 }
 
 body {
+  background: rgb(3, 13, 23);
   background-attachment: fixed;
   background-image: url(../imgs/hgaines-paint-splash.jpg);
   background-position: top;
