--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,8 @@ html {
 }
 
 body {
-  background: #030d17;
+  background: black;
+  background: linear-gradient(164deg, black 27%, #971505 100%);
   background-attachment: fixed;
   background-image: url(../imgs/hgaines-paint-splash.jpg);
   background-position: top;
